# monorepo-example

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel  go.mod
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
bazel/: container.bzl  helm.bzl
rules/: BUILD.bazel  helm.bzl  repo.bzl
rules/rules_helm/: BUILD.bazel  helm.bzl  repo.bzl
scripts/: ci.sh  workspace_status.sh
src/infra/charts/service_base/: BUILD.bazel  Chart.yaml  values.yaml
src/infra/charts/service_base/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
src/infra/charts/service_base/templates/tests/: test-connection.yaml
src/services/go/: BUILD.bazel  main.go
src/services/go/chart/: BUILD.bazel
src/services/python/: BUILD.bazel
src/services/rust/: BUILD.bazel  main.rs
