load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

buildifier(
    name = "buildifier",
)

go_binary(
    name = "hello_go",
    embed = [":go_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_lib",
    srcs = ["main.go"],
    importpath = "github.com/sara4dev/monorepo_example/src/services/go",
    visibility = ["//visibility:private"],
)

go_image(
    name = "go_image",
    srcs = ["main.go"],
    importpath = "github.com/sara4dev/monorepo_example",
)

container_push(
    name = "publish",
    format = "Docker",
    image = ":go_image",
    registry = "index.docker.io",
    repository = "speriyasamy/monorepo_example_go",
    tag = "dev",
)
