load("@rules_python//python:defs.bzl", "py_binary")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@io_bazel_rules_docker//python3:image.bzl", "py3_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

buildifier(
    name = "buildifier",
)

py_binary(
    name = "hello_python",
    srcs = ["main.py"],
    main = "main.py",
)

py3_image(
    name = "py3_image",
    srcs = ["main.py"],
    main = "main.py",
)

container_push(
    name = "publish",
    format = "Docker",
    image = ":py3_image",
    registry = "index.docker.io",
    repository = "speriyasamy/monorepo_example_python",
    tag = "dev",
)
