load("@rules_rust//rust:defs.bzl", "rust_binary")
load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("@io_bazel_rules_docker//rust:image.bzl", "rust_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_push")

buildifier(
    name = "buildifier",
)

rust_binary(
    name = "hello_rust",
    srcs = ["main.rs"],
    edition = "2021",
)

rust_image(
    name = "rust_image",
    srcs = ["main.rs"],
    edition = "2021",
)

container_push(
   name = "publish",
   image = ":rust_image",
   format = "Docker",
   registry = "index.docker.io",
   repository = "speriyasamy/monorepo_example_rust",
   tag = "dev",
)
