load("@com_github_masmovil_bazel_rules//helm:helm.bzl", "helm_chart", "helm_push", "helm_release")
load("@//rules:helm.bzl", "helm_chart_release", "helm_chart_package")


# helm_chart(
#     name = "helm.package",
#     srcs = glob(["**"]),
#     package_name = "service_base",
#     visibility = ["//visibility:public"],
# )

helm_chart_package(
    name = "helm.package",
    srcs = glob(["**"])
)

helm_chart_release(
    name = "helm.release",
    github_repo = "monorepo_example",
    github_user = "sara4dev",
    github_token = "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"
)
